--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -97,3 +97,4 @@ auth.message.unusual.location = You are trying to login from unusual location, c
 message.login.notification.deviceDetails=Device details:
 message.login.notification.location=Location:
 message.login.notification.ip=IP Address:
+message.manager.welcome=Welcome Manager
